fixed missing border

--- a/application.css
+++ b/application.css
@@ -56,6 +56,7 @@ td.colCellDeaths {
 
 td.colCellPopulation {
     border-right: 1px dotted #E1E1E1;
+    border-left: 1px dotted #E1E1E1;
 }
 
 td.colCellGovernmentBranch {
@@ -64,6 +65,7 @@ td.colCellGovernmentBranch {
 
 th.stateName {
     text-align:left;
+    border-right: 1px dotted #E1E1E1;
     padding-left: 5px;
 }
 
